# StellArts

./: .coverage  .gitignore  CONTRIBUTING.md  ESCROW_STORAGE_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Implement Artisan Dashboard with Real-Time Earnings  Makefile  PR_DESCRIPTION.md  README.md  SETUP.md  StellArts.md  VALIDATION_REPORT.md  alembic.ini  artisan_old.py  coverage.xml  docker-compose.yml  main.py  manual_test_guide.md  package-lock.json  pytest.ini  quick_role_test.py  requirements.txt  run_tests_clean.py  test.db  test_geolocation_standalone.py  user.py
contracts/: .gitignore  Cargo.toml  Makefile  README.md  WINDOWS_SETUP.md  build.rs  build.sh  deploy.sh  rust-toolchain.toml  test.sh
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/escrow/test_snapshots/test/: test_create_escrow_already_exists_fails.1.json  test_deposit_funds.1.json  test_deposit_unauthorized_client.1.json  test_fund_already_funded_fails.1.json  test_fund_not_found_fails.1.json  test_refund_after_deadline.1.json  test_refund_before_deadline_fails_without_signature.1.json  test_refund_before_deadline_succeeds_with_signature.1.json  test_release_already_released_fails.1.json  test_release_funds.1.json  test_release_not_client_fails.1.json  test_release_unfunded_fails.1.json
contracts/escrow/test_snapshots/test_legacy/: test_client_reclaim_succeeds_after_deadline.1.json  test_deposit_already_funded.1.json  (+15 more)
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs  test.rs  update.py
contracts/scripts/: deploy_local.ps1  deploy_local.sh
(+494 files in other folders)
