[workspace]
members = [
    "escrow",
    "reputation",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[workspace.dependencies]
soroban-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
